// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Format Snapshot Tests > HTML Format Snapshots > should generate HTML with proper table of contents structure > html-with-toc.html 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="UTF-8">
<meta name="viewport" content="width=device-width, initial-scale=1.0">
<meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; font-src 'self'; base-uri 'none'">
<meta http-equiv="X-Content-Type-Options" content="nosniff">
<meta http-equiv="X-Frame-Options" content="DENY">
<meta http-equiv="Referrer-Policy" content="no-referrer">
<title>snapshot-test - Project Fusion</title>
<style>
body{font-family:monospace;margin:20px;line-height:1.6;color:#000;background:#fff}
pre{background:#f5f5f5;border:1px solid #ccc;padding:10px;overflow-x:auto;white-space:pre}
h1,h2{margin-top:20px}
ul{padding-left:20px}
a{color:#00e;text-decoration:underline}
.error{background:#fee;border:1px solid #c00;padding:10px}
</style>
</head>
<body>
<h1>Project Fusion Output</h1>
<p><strong>Project:</strong> snapshot-test</p>
<p><strong>Generated:</strong> TIMESTAMP</p>
<p><strong>Files:</strong> 5</p>
<p><strong>Created with:</strong> <a href="https://github.com/the99studio/project-fusion" target="_blank" rel="noopener noreferrer">project-fusion v1.0.0</a></p>
<hr>
<h2>Table of Contents</h2>
<ul>
<li><a href="#apipostsjs">api/posts.js</a></li>
<li><a href="#apiusersjs">api/users.js</a></li>
<li><a href="#componentsfooterjs">components/Footer.js</a></li>
<li><a href="#componentsheaderjs">components/Header.js</a></li>
<li><a href="#utilsdatabasejs">utils/database.js</a></li>
</ul>
<hr>
<h2 id="apipostsjs">api/posts.js</h2>
<pre>const posts &#61; &#91;&#93;;</pre>
<h2 id="apiusersjs">api/users.js</h2>
<pre>const users &#61; &#91;&#93;;</pre>
<h2 id="componentsfooterjs">components/Footer.js</h2>
<pre>export default function Footer&#40;&#41; &#123;&#125;</pre>
<h2 id="componentsheaderjs">components/Header.js</h2>
<pre>export default function Header&#40;&#41; &#123;&#125;</pre>
<h2 id="utilsdatabasejs">utils/database.js</h2>
<pre>class Database &#123;&#125;</pre>
</body>
</html>"
`;

exports[`Format Snapshot Tests > HTML Format Snapshots > should generate consistent HTML format for JavaScript files > javascript-files.html 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="UTF-8">
<meta name="viewport" content="width=device-width, initial-scale=1.0">
<meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; font-src 'self'; base-uri 'none'">
<meta http-equiv="X-Content-Type-Options" content="nosniff">
<meta http-equiv="X-Frame-Options" content="DENY">
<meta http-equiv="Referrer-Policy" content="no-referrer">
<title>snapshot-test - Project Fusion</title>
<style>
body{font-family:monospace;margin:20px;line-height:1.6;color:#000;background:#fff}
pre{background:#f5f5f5;border:1px solid #ccc;padding:10px;overflow-x:auto;white-space:pre}
h1,h2{margin-top:20px}
ul{padding-left:20px}
a{color:#00e;text-decoration:underline}
.error{background:#fee;border:1px solid #c00;padding:10px}
</style>
</head>
<body>
<h1>Project Fusion Output</h1>
<p><strong>Project:</strong> snapshot-test</p>
<p><strong>Generated:</strong> TIMESTAMP</p>
<p><strong>Files:</strong> 2</p>
<p><strong>Created with:</strong> <a href="https://github.com/the99studio/project-fusion" target="_blank" rel="noopener noreferrer">project-fusion v1.0.0</a></p>
<hr>
<h2>Table of Contents</h2>
<ul>
<li><a href="#appjs">app.js</a></li>
<li><a href="#helpersjs">helpers.js</a></li>
</ul>
<hr>
<h2 id="appjs">app.js</h2>
<pre>&#47;&#47; Simple Express application
const express &#61; require&#40;&#39;express&#39;&#41;;
const path &#61; require&#40;&#39;path&#39;&#41;;

const app &#61; express&#40;&#41;;
const PORT &#61; process.env.PORT || 3000;

&#47;&#47; Middleware
app.use&#40;express.json&#40;&#41;&#41;;
app.use&#40;express.static&#40;&#39;public&#39;&#41;&#41;;

&#47;&#47; Routes
app.get&#40;&#39;&#47;&#39;, &#40;req, res&#41; &#61;&gt; &#123;
    res.sendFile&#40;path.join&#40;__dirname, &#39;index.html&#39;&#41;&#41;;
&#125;&#41;;

app.get&#40;&#39;&#47;api&#47;health&#39;, &#40;req, res&#41; &#61;&gt; &#123;
    res.json&#40;&#123; status: &#39;ok&#39;, timestamp: new Date&#40;&#41;.toISOString&#40;&#41; &#125;&#41;;
&#125;&#41;;

&#47;&#47; Start server
app.listen&#40;PORT, &#40;&#41; &#61;&gt; &#123;
    console.log&#40;&#96;Server running on http:&#47;&#47;localhost:&#36;&#123;PORT&#125;&#96;&#41;;
&#125;&#41;;</pre>
<h2 id="helpersjs">helpers.js</h2>
<pre>&#47;&#47; Helper functions
const crypto &#61; require&#40;&#39;crypto&#39;&#41;;

&#47;**
 * Generate a random ID
 * &#64;param &#123;number&#125; length - Length of the ID
 * &#64;returns &#123;string&#125; Random ID
 *&#47;
function generateId&#40;length &#61; 8&#41; &#123;
    return crypto.randomBytes&#40;length&#41;.toString&#40;&#39;hex&#39;&#41;;
&#125;

&#47;**
 * Validate email format
 * &#64;param &#123;string&#125; email - Email to validate
 * &#64;returns &#123;boolean&#125; True if valid
 *&#47;
function isValidEmail&#40;email&#41; &#123;
    const regex &#61; &#47;^&#91;^/s&#64;&#93;&#43;&#64;&#91;^/s&#64;&#93;&#43;/.&#91;^/s&#64;&#93;&#43;&#36;&#47;;
    return regex.test&#40;email&#41;;
&#125;

module.exports &#61; &#123;
    generateId,
    isValidEmail
&#125;;</pre>
</body>
</html>"
`;

exports[`Format Snapshot Tests > HTML Format Snapshots > should generate consistent HTML format with proper escaping > html-with-escaping.html 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="UTF-8">
<meta name="viewport" content="width=device-width, initial-scale=1.0">
<meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; font-src 'self'; base-uri 'none'">
<meta http-equiv="X-Content-Type-Options" content="nosniff">
<meta http-equiv="X-Frame-Options" content="DENY">
<meta http-equiv="Referrer-Policy" content="no-referrer">
<title>snapshot-test - Project Fusion</title>
<style>
body{font-family:monospace;margin:20px;line-height:1.6;color:#000;background:#fff}
pre{background:#f5f5f5;border:1px solid #ccc;padding:10px;overflow-x:auto;white-space:pre}
h1,h2{margin-top:20px}
ul{padding-left:20px}
a{color:#00e;text-decoration:underline}
.error{background:#fee;border:1px solid #c00;padding:10px}
</style>
</head>
<body>
<h1>Project Fusion Output</h1>
<p><strong>Project:</strong> snapshot-test</p>
<p><strong>Generated:</strong> TIMESTAMP</p>
<p><strong>Files:</strong> 2</p>
<p><strong>Created with:</strong> <a href="https://github.com/the99studio/project-fusion" target="_blank" rel="noopener noreferrer">project-fusion v1.0.0</a></p>
<hr>
<h2>Table of Contents</h2>
<ul>
<li><a href="#stylescss">styles.css</a></li>
<li><a href="#templatehtml">template.html</a></li>
</ul>
<hr>
<h2 id="stylescss">styles.css</h2>
<pre>&#47;* Global styles *&#47;
* &#123;
    box-sizing: border-box;
&#125;

body &#123;
    margin: 0;
    padding: 0;
    font-family: -apple-system, BlinkMacSystemFont, &#39;Segoe UI&#39;, sans-serif;
    line-height: 1.6;
    color: #333;
&#125;

.container &#123;
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 20px;
&#125;

&#47;* Button styles *&#47;
.btn &#123;
    display: inline-block;
    padding: 12px 24px;
    background: #007bff;
    color: white;
    text-decoration: none;
    border-radius: 4px;
    transition: background 0.3s ease;
&#125;

.btn:hover &#123;
    background: #0056b3;
&#125;

&#47;* Responsive design *&#47;
&#64;media &#40;max-width: 768px&#41; &#123;
    .container &#123;
        padding: 0 10px;
    &#125;
    
    .btn &#123;
        display: block;
        text-align: center;
        margin: 10px 0;
    &#125;
&#125;</pre>
<h2 id="templatehtml">template.html</h2>
<pre>&lt;&#33;DOCTYPE html&gt;
&lt;html lang&#61;&quot;en&quot;&gt;
&lt;head&gt;
    &lt;meta charset&#61;&quot;UTF-8&quot;&gt;
    &lt;meta name&#61;&quot;viewport&quot; content&#61;&quot;width&#61;device-width, initial-scale&#61;1.0&quot;&gt;
    &lt;title&gt;Test Template&lt;&#47;title&gt;
    &lt;style&gt;
        body &#123;
            font-family: Arial, sans-serif;
            margin: 0;
            padding: 20px;
        &#125;
        .container &#123;
            max-width: 800px;
            margin: 0 auto;
        &#125;
        .header &#123;
            background: #f5f5f5;
            padding: 20px;
            border-radius: 8px;
        &#125;
    &lt;&#47;style&gt;
&lt;&#47;head&gt;
&lt;body&gt;
    &lt;div class&#61;&quot;container&quot;&gt;
        &lt;div class&#61;&quot;header&quot;&gt;
            &lt;h1&gt;Welcome to Test App&lt;&#47;h1&gt;
            &lt;p&gt;This is a &lt;strong&gt;test&lt;&#47;strong&gt; application with &lt;em&gt;HTML&lt;&#47;em&gt; content.&lt;&#47;p&gt;
        &lt;&#47;div&gt;
        
        &lt;main&gt;
            &lt;h2&gt;Features &amp; Benefits&lt;&#47;h2&gt;
            &lt;ul&gt;
                &lt;li&gt;Fast &amp; reliable&lt;&#47;li&gt;
                &lt;li&gt;Secure by design&lt;&#47;li&gt;
                &lt;li&gt;Easy to use&lt;&#47;li&gt;
            &lt;&#47;ul&gt;
            
            &lt;p&gt;Contact us at: &lt;a href&#61;&quot;mailto:test&#64;example.com&quot;&gt;test&#64;example.com&lt;&#47;a&gt;&lt;&#47;p&gt;
        &lt;&#47;main&gt;
    &lt;&#47;div&gt;
    
    &lt;script&gt;
        console.log&#40;&#39;Page loaded successfully&#33;&#39;&#41;;
        document.addEventListener&#40;&#39;DOMContentLoaded&#39;, &#40;&#41; &#61;&gt; &#123;
            console.log&#40;&#39;DOM ready&#39;&#41;;
        &#125;&#41;;
    &lt;&#47;script&gt;
&lt;&#47;body&gt;
&lt;&#47;html&gt;</pre>
</body>
</html>"
`;

exports[`Format Snapshot Tests > Markdown Format Snapshots > should generate consistent markdown format for JavaScript files > javascript-files.md 1`] = `
"# Generated Project Fusion File

**Project:** snapshot-test

**Generated:** [TIMESTAMP]

**Files:** 2

**Generated by:** [project-fusion v1.0.0](https://github.com/the99studio/project-fusion)

---

## 📁 Table of Contents

- [index.js](#indexjs)
- [utils.js](#utilsjs)

---

## 📄 index.js {#indexjs}

\`\`\`javascript
// Main application entry point
const express = require('express');
const app = express();

app.get('/', (req, res) => {
    res.send('Hello, World!');
});

app.listen(3000, () => {
    console.log('Server running on port 3000');
});
\`\`\`

## 📄 utils.js {#utilsjs}

\`\`\`javascript
// Utility functions
function formatDate(date) {
    return date.toISOString().split('T')[0];
}

function capitalize(str) {
    return str.charAt(0).toUpperCase() + str.slice(1);
}

module.exports = { formatDate, capitalize };
\`\`\`

"
`;

exports[`Format Snapshot Tests > Markdown Format Snapshots > should generate consistent markdown format for TypeScript files > typescript-files.md 1`] = `
"# Generated Project Fusion File

**Project:** snapshot-test

**Generated:** [TIMESTAMP]

**Files:** 2

**Generated by:** [project-fusion v1.0.0](https://github.com/the99studio/project-fusion)

---

## 📁 Table of Contents

- [service.ts](#servicets)
- [types.ts](#typests)

---

## 📄 service.ts {#servicets}

\`\`\`typescript
// User service
import { User, CreateUserRequest, UserRole } from './types.js';

export class UserService {
    private users: User[] = [];
    private nextId = 1;

    createUser(request: CreateUserRequest): User {
        const user: User = {
            id: this.nextId++,
            name: request.name,
            email: request.email,
            createdAt: new Date()
        };
        
        this.users.push(user);
        return user;
    }

    findUser(id: number): User | undefined {
        return this.users.find(user => user.id === id);
    }
}
\`\`\`

## 📄 types.ts {#typests}

\`\`\`typescript
// Type definitions
export interface User {
    id: number;
    name: string;
    email: string;
    createdAt: Date;
}

export type UserRole = 'admin' | 'user' | 'moderator';

export interface CreateUserRequest {
    name: string;
    email: string;
    role?: UserRole;
}
\`\`\`

"
`;

exports[`Format Snapshot Tests > Markdown Format Snapshots > should generate consistent markdown format for mixed file types > mixed-files.md 1`] = `
"# Generated Project Fusion File

**Project:** snapshot-test

**Generated:** [TIMESTAMP]

**Files:** 3

**Generated by:** [project-fusion v1.0.0](https://github.com/the99studio/project-fusion)

---

## 📁 Table of Contents

- [config.json](#configjson)
- [README.md](#readmemd)
- [script.sh](#scriptsh)

---

## 📄 config.json {#configjson}

\`\`\`json
{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {
    "express": "^4.18.0",
    "typescript": "^5.0.0"
  },
  "scripts": {
    "start": "node index.js",
    "build": "tsc"
  }
}
\`\`\`

## 📄 README.md {#readmemd}

\`\`\`markdown
# Test Project

This is a test project for snapshot testing.

## Features

- **Fast**: Built with performance in mind
- **Secure**: Follows security best practices
- **Reliable**: Comprehensive test coverage

## Installation

\`\`\`bash
npm install
npm start
\`\`\`

## License

MIT License
\`\`\`

## 📄 script.sh {#scriptsh}

\`\`\`bash
#!/bin/bash
# Deployment script

echo "Starting deployment..."

# Build the project
npm run build

# Run tests
npm test

# Deploy to production
echo "Deploying to production..."
rsync -av dist/ user@server:/var/www/app/

echo "Deployment complete!"
\`\`\`

"
`;
